environments/prod/patches/replicas.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lms
spec:
  replicas: 3
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cms
spec:
  replicas: 2
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lms-worker
spec:
  replicas: 2
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cms-worker
spec:
  replicas: 1
