environments/prod/patches/ingress-lms.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: lms-ingress
spec:
  tls:
    - hosts:
        - learn.alecloud.site
      secretName: lms-tls-prod
  rules:
    - host: learn.alecloud.site
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: lms
                port:
                  number: 8000
